# django-money

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .venv  CHANGES.rst  CHANGES.txt  CONTRIBUTING.rst  MANIFEST  MANIFEST.in  Makefile  README.md  README.rst  gen_tox.bash  gen_travis.bash  mypy.ini  pyproject.toml  pytest.ini  runtests.py  setup.cfg  setup.py  tox.ini
.github/: SUPPORT.rst
.github/workflows/: main.yml  release.yml  upgrader.yml
django_money/: pyvenv.cfg
djmoney/: __init__.py  _compat.py  admin.py  apps.py  baker_field_generator.py  money.py  money.pyi  serializers.py  settings.py  utils.py
djmoney/contrib/django_rest_framework/: __init__.py  fields.py  helpers.py
djmoney/contrib/exchange/: admin.py  apps  apps.py  exceptions.py  models.py  tasks.py
djmoney/contrib/exchange/backends/: __init__.py  base.py  fixer.py  openexchangerates.py  unirateapi.py
djmoney/contrib/exchange/management/: base.py
djmoney/contrib/exchange/management/commands/: clear_rates.py  update_rates.py
djmoney/contrib/exchange/migrations/: 0001_initial.py
djmoney/forms/: __init__.py  fields.py  widgets.py
djmoney/graphql/: fields.py
djmoney/models/: __init__.py  fields.py  fields.pyi  managers.py  validators.py
djmoney/templatetags/: djmoney.py
djmoney/tests/: __init__.py  form_tests.py  managers_tests.py  model_tests.py  money_patched.py  reversion_tests.py  runtests.py  settings.py  tags_tests.py  test_settings.py
djmoney/tests/testapp/: admin.py  forms.py  models.py
docs/: Makefile  changes.rst  conf.py  index.rst  make.bat  requirements.txt  settings.rst
tests/: __init__.py  _compat.py  conftest.py  form_tests.py  model_tests.py  runtests.py  settings.py  settings_reversion.py  test_admin.py  test_baker_generators.py  test_form.py  test_managers.py  test_migrations.py  test_models.py  test_money.py  test_reversion.py  test_serialization.py  test_settings.py  test_tags.py  urls.py
tests/contrib/: test_django_rest_framework.py
tests/contrib/exchange/: conftest.py  test_admin.py  test_backends.py  test_celery.py  test_commands.py  test_model.py
tests/migrations/: helpers.py  test_migrations.py
tests/testapp/: admin.py  forms.py  models.py
