[build-system]
requires = ["setuptools >= 68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.setuptools.dynamic]
version = {attr = "djmoney.__version__"}

[project]
name = "django-money"
description = "Adds support for using money and currency fields in django models and forms. Uses py-moneyed as the money implementation."
authors = [
    {name = "Greg Reinbach", email = "greg@reinbach.com"},
]
dynamic = ["version"]
readme = "README.rst"
license = {text = "BSD"}
keywords = ["django", "py-money", "money"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.7"
dependencies = [
    "Django>=2.2",
    "py-moneyed>=2.0,<3.1"
]

[project.urls]
homepage = "https://github.com/django-money/django-money"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pre-commit",
    "setuptools>=68.0.0,<69.0.0",
    "tox",
]
exchange = [
    "certifi>=2021.5.30",
]
test = [
    "django-stubs",
    "mixer",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-pythonpath",
]
